--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="tile">
               <div class="tile is-parent is-6">
                 <div class="tile is-child box">
-                  <div class="projectLogo">
+                  <div class="vCenterImage bookClubBlue">
                     <img src="assets/House-share-logo.png" alt="House Share Logo Image" class="mobileNone">
                     <img src="assets/House-share-logo-mobile.png" alt="House Share Logo Image" class="mobileShow"> 
                   </div>
@@ -280,11 +280,11 @@
                     </a>
                     </div>
                     <p class="heading">Task</p>
-                    <p>Create a full stack application in one week.</p>
+                    <p>Create a full stack application in one week</p>
                     <p>Working alone, I chose to build a Django app with a React front end and a PostgreSQL database. In
                       the app users are able to create house groups, which existing or new housemates are then able to
                       request access to. Once in the group expenses can then be entered along with additional
-                      information and images, and can mark expenses as paid, with this information available to all
+                      information and images, and users can mark expenses as paid, with this information available to all
                       group members</p>
                     <p class="heading">Technologies</p>
                     <p>DJANGO | REACT.JS | POSTGRESQL | HTML | SCSS | BULMA | HEROKU | JWT </p>
@@ -293,25 +293,25 @@
               </div>
             </div>
             <div class="tile is-parent">
-              <div class="tile is-child box bookClubBlue">
+              <div class="tile is-child box bookClubBlue vCenterImage">
                 <img src="assets/House-Share_expense_detail_2.png" alt="">
               </div>
             </div>
           </div>
           <div class="tile is-vertical">
             <div class="tile is-parent">
-              <div class="tile is-child box bookClubBlue">
+              <div class="tile is-child box bookClubBlue vCenterImage">
                 <img src="assets/house-share-homepage.png" alt="">
               </div>
             </div>
             <div class="tile">
               <div class="tile is-parent is-6">
-                <div class="tile is-child box bookClubBlue">
+                <div class="tile is-child box bookClubBlue vCenterImage">
                   <img src="assets/house-share-mobile-expense_split.png" alt="">
                 </div>
               </div>
               <div class="tile is-parent is-6">
-                <div class="tile is-child box bookClubBlue">
+                <div class="tile is-child box bookClubBlue vCenterImage">
                   <img src="assets/house-share-mobile-home.png" alt="">
                 </div>
               </div>
@@ -320,29 +320,29 @@
         </div>
         <div class="tile is-ancestor">
           <div class="tile is-parent is-3">
-            <div class="tile is-child box bookClubBlue">
-              <div class="projectLogo">
+            <div class="tile is-child box bookClubBlue vCenterImage">
+              <div class="vCenterImage">
                 <img src="assets/House-Share_signup.png" alt="">
               </div>
             </div>
           </div>
           <div class="tile is-parent is-3">
-            <div class="tile is-child box bookClubBlue">
-              <div class="projectLogo">
+            <div class="tile is-child box bookClubBlue vCenterImage">
+              <div class="vCenterImage">
                 <img src="assets/House-Share_user_detail.png" alt="">
               </div>
             </div>
           </div>
           <div class="tile is-parent is-3">
-            <div class="tile is-child box bookClubBlue">
-              <div class="projectLogo">
+            <div class="tile is-child box bookClubBlue vCenterImage">
+              <div class="vCenterImage">
                 <img src="assets/house-share-expense_list.png" alt="">
               </div>
             </div>
           </div>
           <div class="tile is-parent is-3">
-            <div class="tile is-child box bookClubBlue">
-              <div class="projectLogo">
+            <div class="tile is-child box bookClubBlue vCenterImage">
+              <div class="vCenterImage">
                 <img src="assets/house-share-grouped_expense.png" alt="">
               </div>
             </div>
@@ -354,7 +354,7 @@
         <div class="tile is-vertical">
           <div class="tile">
             <div class="tile is-parent is-6">
-              <div class="tile is-child box bookClubBlue">
+              <div class="tile is-child box bookClubBlue vCenterImage">
                 <img src="assets/bookedup - logo.png" alt="Booked-Up Logo" class="mobileNone">
                 <img src="assets/bookedup - logo-mobile.png" alt="Booked-Up Logo" class='mobileShow'>
               </div>
@@ -384,25 +384,25 @@
             </div>
           </div>
           <div class="tile is-parent">
-            <div class="tile is-child box bookClubBlue">
+            <div class="tile is-child box bookClubBlue vCenterImage">
               <img src="assets/booked-up-allBookClubs.png" alt="">
             </div>
           </div>
         </div>
         <div class="tile is-vertical">
           <div class="tile is-parent">
-            <div class="tile is-child box bookClubBlue">
+            <div class="tile is-child box bookClubBlue vCenterImage">
               <img src="assets/booked-up-bookclub.png" alt="">
             </div>
           </div>
           <div class="tile">
             <div class="tile is-parent is-6">
-              <div class="tile is-child box bookClubBlue">
+              <div class="tile is-child box bookClubBlue vCenterImage">
                 <img src="assets/Booked-Up - pLogin.png" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
-              <div class="tile is-child box bookClubBlue">
+              <div class="tile is-child box bookClubBlue vCenterImage">
                 <img src="assets/Booked-up-home-p.png" alt="">
               </div>
             </div>
@@ -415,8 +415,8 @@
         <div class="tile is-vertical">
           <div class="tile">
             <div class="tile is-parent is-6">
-              <div class="tile is-child box">
-                <img class="tubeImage" src="assets/tube-mapper-logo.png" alt="">
+              <div class="tile is-child box projectLogoDiv vCenterImage">
+                <img class="tubeImage projectLogoImage" src="assets/tube-time-logo.png" alt="Tube Time Logo">
               </div>
             </div>
             <div class="tile is-parent is-6">
@@ -433,7 +433,7 @@
                   </div>
                   <p class="heading">Task</p>
                   <p>In two days create a React app utilising a public API</p>
-                  <p>Working in a pair we created a fron end React app that used the TFL API to provide users with
+                  <p>Working in a pair we created a front end React app that used the TFL API to provide users with
                     station information and arrival times for every train and station on the TFL network</p>
                   <p class="heading">Technologies</p>
                   <p>REACT.JS | TFL API | HTML | CSS | BULMA | WEBPACK | GIT & GITHUB </p>
@@ -442,25 +442,25 @@
             </div>
           </div>
           <div class="tile is-parent">
-            <div class="tile is-child box">
+            <div class="tile is-child box vCenterImage">
               <img src="assets/tubemap - facilities.png" alt="">
             </div>
           </div>
         </div>
         <div class="tile is-vertical">
           <div class="tile is-parent">
-            <div class="tile is-child box">
+            <div class="tile is-child box vCenterImage">
               <img src="assets/tubemap - station list.png" alt="">
             </div>
           </div>
           <div class="tile">
             <div class="tile is-parent is-6">
-              <div class="tile is-child box">
+              <div class="tile is-child box vCenterImage">
                 <img src="assets/tubemap - mobile home.png" alt="">
               </div>
             </div>
             <div class="tile is-parent is-6">
-              <div class="tile is-child box">
+              <div class="tile is-child box vCenterImage">
                 <img src="assets/tubemap - mobile arrivals.png" alt="">
               </div>
             </div>
@@ -473,7 +473,7 @@
         <div class="tile is-vertical">
           <div class="tile">
             <div class="tile is-parent is-6">
-              <div class="tile is-child box black">
+              <div class="tile is-child box black vCenterImage">
                 <img src="assets/pac-dude-game-start.png" alt="PAC-DUDE Logo" class="mobileNone"> 
                 <img src="assets/pac-dude-game-start-mobile.png" alt="PAC-DUDE Logo" class="mobileShow"> 
               </div>
@@ -491,9 +491,9 @@
                   </a>
                   </div>
                   <p class="heading">Task</p>
-                  <p>To make a game to run in the browser using 'vanilla' JS, HTML & CSS</p>
+                  <p>To make a game to run in a browser using 'vanilla' JS, HTML & CSS only</p>
                   <p>For this project I created a themed version of the classic PacMan game. The game has 5 levels which
-                    progressivly increase in difficulty, using a Bredth First Search algorithm to controll the 'ghosts'.
+                    progressivly increase in difficulty, and uses a Bredth-first Search algorithm to controll the 'ghosts'.
                     The game includes additional superfoods including allowing the user to collect and shoot missliles
                   </p>
                   <p class="heading">Technologies</p>
@@ -503,31 +503,31 @@
             </div>
           </div>
           <div class="tile is-parent">
-            <div class="tile is-child box black">
+            <div class="tile is-child box black vCenterImage">
               <img src="assets/pac-dude-missile-exp.png" alt="">
             </div>
           </div>
           <div class="tile is-parent">
-            <div class="tile is-child box black">
+            <div class="tile is-child box black vCenterImage">
               <img src="assets/pac-dude-frozen.png" alt="">
             </div>
           </div>
         </div>
         <div class="tile is-vertical">
           <div class="tile is-parent">
-            <div class="tile is-child box black">
+            <div class="tile is-child box black vCenterImage">
               <img src="assets/pac-dude-start.png" alt="">
             </div>
           </div>
           <div class="tile">
             <div class="tile is-parent">
-              <div class="tile is-child box black">
+              <div class="tile is-child box black vCenterImage">
                 <img src="assets/pac-dude-eatable.png" alt="">
               </div>
             </div>
           </div>
           <div class="tile is-parent">
-            <div class="tile is-child box black">
+            <div class="tile is-child box black vCenterImage">
               <img src="assets/pac-dude-home.png" alt="">
             </div>
           </div>
