--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <br>
           <p>My background is in global supply chains and analytics, and I have always had a passion for coding. This
             year I decided to follow this passion and enroled in the Software Engineering Immersive course with General
-            Assembley to imporve my skills. I am now looking for an oportunity to put these skills to good use working
+            Assembley to improve my skills. I am now looking for an opportunity to put these skills to good use working
             as a Full-Stack Developer. </p>
           <br>
 
