--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             as a Full-Stack Developer. </p>
           <br>
 
-          <p>Below you can see my current skills and sample of my projects.
+          <p>Below you can see my current skills and samples of my projects.
         </div>
         <div class="column is-5">
 
@@ -416,7 +416,7 @@
           <div class="tile">
             <div class="tile is-parent is-6">
               <div class="tile is-child box projectLogoDiv vCenterImage">
-                <img class="tubeImage projectLogoImage" src="assets/tube-time-logo.png" alt="Tube Time Logo">
+                <img class="tubeImage projectLogoImage" src="assets/tube-mapper-logo.png" alt="Tube Time Logo">
               </div>
             </div>
             <div class="tile is-parent is-6">
