--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="tile is-parent is-6">
               <div class="tile is-child box">
                 <div class="projectInfo">
-                  <h2>=> Tube Time</h2>
+                  <h2>=> Tube Mapper</h2>
                   <div class="projectLinks">
                     <a href="https://peter-gilbert.co.uk/project-2">
                     <i class="fas fa-link fa-1x"></i>
