--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
-    <script src='../../dist//bundle.js'></script>
+    <script src='../../dist/bundle.js'></script>
 
 
     <link rel="stylesheet"
