--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <script src='./dist/bundle.js'></script>
-
-
+    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
     <link rel="stylesheet"
       href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
@@ -16,5 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="./dist/bundle.js"></script>
   </body>
 </html>
